tests/ui/impl-trait/in-bindings/implicit-sized.stderr
error[E0277]: the size for values of type `str` cannot be known at compilation time
  --> $DIR/implicit-sized.rs:7:13
   |
LL |     let x: &impl Trait = "hi";
   |             ^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `str`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
